Allow for JHipster template to configure properties and defaults based on environment
* Replaced Web/ServiceAppTemplate with a class (so the loading of the jhipster properties can be dynamic)
* Added postLogoutUri to OidcProperties (to support micronaut)